# XposedMod

./: .gitmodules  README.MD  build.gradle.kts  gradle.properties  settings.gradle
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  xposedmod.cc
app/src/main/java/com/jasonkhew96/xposedmod/: XposedInit.kt
app/src/main/res/values/: arrays.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
